# fast_gpt

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.md  main.py  models.py  pyproject.toml  requirements.txt  sql_app.db  test.py  utils.py
app/: main.py  setting.py  utils.py
app/data/: crud.py  database.py  models.py  schemas.py
app/routers/: authenticate.py  chat.py  gemi.py  profile.py  tools.py
chat_web_proxy/: fake_users_db.py  main.py  models.py  test.py  utils.py
data/: crud.py  database.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 69f70f6f4bb4_create_trigger_on_create_message.py  b9ef5bba2b03_base_migration.py
model/: models.py
postgres_data/: postmaster.pid
postgres_data/base/1/: pg_internal.init
postgres_data/base/16384/: 1247  1249  1259  16395  16402  16404  16405  16406  16413  16420  16421  16428  16435  16436  16443  16450  2224  2579  2604  2606  2608  2610  2619  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  (+10 more)
postgres_data/base/5/: pg_internal.init
postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
routers/: authenticate.py  chat.py  profile.py
