[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["hoang.pham <hoang.pham@executionlab.asia>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
openai = "^1.13.3"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
cryptography = "^42.0.5"
passlib = "^1.7.4"
bcrypt = "=4.0.1"
langchain = "^0.1.9"
langchain-openai = "^0.0.8"
python-dotenv = "^1.0.1"
google-generativeai = "^0.4.0"
google-cloud-secret-manager = "^2.18.2"
alembic = "^1.13.1"

ipython = "^8.22.2"
psycopg = "^3.1.18"
psycopg2 = "^2.9.9"
langchain-core = "^0.1.30"
pydantic-settings = "^2.2.1"
cloud-sql-python-connector = {extras = ["asyncpg"], version = "^1.7.0"}
pg8000 = "^1.30.5"
langchainhub = "^0.1.15"
faiss-cpu = "^1.8.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
